--- a/catalog.html
+++ b/catalog.html
@@ -6,31 +6,28 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="img/Unic_ico.png" type="иконка">
 </head>
-<body><div class="header">
-    <ul class="main_menu">
-	<img src="img/Unic_ico.jpg">
-	<li><a href="index.html">Главная</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-    <li><a href="catalog.html">Каталог</a></Li>
-	</ul>
+<body>
+<div class="header">
+		<ul class="main_menu">
+		<img class="logo" src="img/Unic_ico.jpg">
+		<li><div class="link"><a href="index.html">Главная</a></div></li>
+		<li><div class="link"><a href="contacts.html">Контакты</a></div></li>
+		<li><div class="link"><a href="catalog.html">Каталог</a></div></Li>
+		</ul>
 	</div>
-	<hr>
+	<div class="view">
+	<div class="container">
 	<h1>Каталог</h1>
-	<ul>
 	
-    <li><a href="catalog/mumziki.html"><img src="img/mumzik.jpg" alt="Мумзик" width="56" height="40"><br>Мумзики</a></Li>
-	<br>
-	
-    <li><a href="catalog/shorki.html"><img src="img/shork.jpg" alt="Шорк" width="56" height="40"><br>Шорьки</a></li>
-	<br>
-	
-    <li><a href="catalog/zeluki.html"><img src="img/zeluk.jpg" alt="Зелюк" width="56" height="40"><br>Зелюки</a></li>
-	</ul>
-	
+	<div class="element">
+		<div class="elemt"><a href="catalog/mumziki.html"><img src="img/mumzik.jpg" alt="Мумзик" width="90" height="90">Мумзики</a></div>
+		<div class="elemt"><a href="catalog/shorki.html"><img src="img/shork.jpg" alt="Шорк" width="90" height="90">Шорьки</a></div>
+		<div class="elemt"><a href="catalog/zeluki.html"><img src="img/zeluk.jpg" alt="Зелюк" width="90" height="90">Зелюки</a></div>
+	</div>
+	</div></div>
 	<div class="footer">
-		<hr>
-		<a target="_blank" href="https://geekbrains.ru"> Geekbrains </a><br>
-		Фсе права защищены ))) &copy; 2020
+		<a target="_blank" href="https://geekbrains.ru">*Geekbrains*</a><br>
+		<div class="copiright">Фсе права защищены ))) &copy; 2020</div>
 	</div>
 	
 </body>
