--- a/catalog/mumziki.html
+++ b/catalog/mumziki.html
@@ -3,26 +3,28 @@
 <head>
 	<meta charset="utf-8">
 	<title> Мюмзики </title>
-	<link rel="stylesheet" href="style_cat.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 	<div class="header">
-	<ul class="main_menu">
-	<img src="../img/Unic_ico.jpg">
-	<li><a href="../index.html">Главная</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-    <li><a href="../catalog.html">Каталог</a></Li>
-    </ul>
+		<ul class="main_menu">
+		<img class="logo" src="../img/Unic_ico.jpg">
+		<li><div class="link"><a href="../index.html">Главная</a></div></li>
+		<li><div class="link"><a href="../contacts.html">Контакты</a></div></li>
+		<li><div class="link"><a href="../catalog.html">Каталог</a></div></Li>
+		</ul>
 	</div>
-	<hr>
-		<h1>
-		Мюмзики
+	
+	<div class="container">
+	<h1>
+		Мюмзики<input type="Button" id="buy" name="buy" value="Купить">
 		</h1>
 		<!-- источник картинки
 		<img src="http://www.ytime.com.ua/img/forall/zazerkalie/2_zazerkalie/6_shaltay_boltay/1865_Tenniel_z_31_2.jpg" alt="1865_Tenniel_z_31_2">
 		-->
 		
 		<a class="passe" target="_blank" href="../img/1865_Tenniel_z_31_2++.jpg"><img src="../img/1865_Tenniel_z_31_2++.jpg" alt="1865_Tenniel_z_31_2"></a>
+		<div class="sys">
 		<h3 class="heading">
 		Краткое описание
 		</h3>
@@ -46,6 +48,8 @@
 		И хрюкотали <a href="zeluki.html">зелюки</a>,<br> 
 		Как мюмзики в мове.<br> 
 		</p>
+		</div>
+		<div class="end_txt">
 		<h4>
 		Полный текст на русском
 		</h4>
@@ -94,11 +98,12 @@
 
 Перевод Дины Орловской <br>
 		</p>
-		
+	
+	</div>
+	</div>
 	<div class="footer">
-		<hr>
-		<a target="_blank" href="https://geekbrains.ru"> Geekbrains </a><br>
-		Фсе права защищены ))) &copy; 2020
+		<a target="_blank" href="https://geekbrains.ru">*Geekbrains*</a><br>
+		<div class="copiright">Фсе права защищены ))) &copy; 2020</div>
 	</div>
 		
 </body>
