--- a/contacts.html
+++ b/contacts.html
@@ -6,18 +6,18 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="img/Unic_ico.png" type="иконка">
 </head>
-<body><div class="header">
-	<ul class="main_menu">
-	<img src="img/Unic_ico.jpg">
-	<li><a href="index.html">Главная</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-    <li><a href="catalog.html">Каталог</a></Li>
-	</ul>
+<body>
+<div class="header">
+		<ul class="main_menu">
+		<img class="logo" src="img/Unic_ico.jpg">
+		<li><div class="link"><a href="index.html">Главная</a></div></li>
+		<li><div class="link"><a href="contacts.html">Контакты</a></div></li>
+		<li><div class="link"><a href="catalog.html">Каталог</a></div></Li>
+		</ul>
 	</div>
-	<hr>
-    <h1>Контакты</h1>
+	<div class="container">
+	<h1>Контакты</h1>
 	<div >
-		
 		<form id="contactform" name="contact" method="post" action="mailto:thereIdontknowWhere@mail.ru">
 			<fieldset id="w">
 				<legend class="note"><span class="req">*</span>Поля со звездочкой обязательны для заполнения</legend>
@@ -53,13 +53,12 @@
 	Находимся возможно где-то здесь или где-то там...<br>
 	(Это и есть адрес)
 	<br>
-	<iframe class=inverted" src="https://yandex.ru/map-widget/v1/-/CCQXj9Q" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
+	<iframe class="inverted" src="https://yandex.ru/map-widget/v1/-/CCQXj9Q" frameborder="1" allowfullscreen="true"></iframe>
 	</fieldset>
 	<div class="footer">
-		<hr>
-		<a target="_blank" href="https://geekbrains.ru"> Geekbrains </a><br>
-		Фсе права защищены ))) &copy; 2020
-	</div>
+		<a target="_blank" href="https://geekbrains.ru">*Geekbrains*</a><br>
+		<div class="copiright">Фсе права защищены ))) &copy; 2020</div>
+	</div></div>
 </body>
 
 
