--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Главная страница</title>
+	<meta charset="UTF-8">
+	<title>Главная страница</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="img/Unic_ico.png" type="иконка">
 </head>
-<body><div class="header">
-    <ul class="main_menu">
-	<img src="img/Unic_ico.jpg">
-	<li><a href="index.html">Главная</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-    <li><a href="catalog.html">Каталог</a></Li>
-    </ul>
-	<hr>
+<body>
+	<div class="header">
+		<ul class="main_menu">
+		<img class="logo" src="img/Unic_ico.jpg">
+		<li><div class="link"><a href="index.html">Главная</a></div></li>
+		<li><div class="link"><a href="contacts.html">Контакты</a></div></li>
+		<li><div class="link"><a href="catalog.html">Каталог</a></div></Li>
+		</ul>
 	</div>
-	<h1>Главная</h1>
+	<div class="view">
+	<div class="container">
+	<h1>Самая &#160 &#160 Главная</h1>
 	
 	
 	<h3 class="heading">
 	Необычайные существа созданные Льюисом Кэроллом
 	</h3>
-	
-	Приветствую на сайте необычайных существ. Пока только по Льюису Кэроллу.
-	
+	<div class="Citat">Приветствую на сайте необычайных существ. Пока только по Льюису Кэроллу.</div>
+	</div>
+	</div>
 	<div class="footer">
-		<hr>
-		<a target="_blank" href="https://geekbrains.ru"> Geekbrains </a><br>
-		Фсе права защищены ))) &copy; 2020
+		<a target="_blank" href="https://geekbrains.ru">*Geekbrains*</a><br>
+		<div class="copiright">Фсе права защищены ))) &copy; 2020</div>
 	</div>
 	
 </body>
-
-
-
 </html>
